--- a/project_when2sleep/src/App.css
+++ b/project_when2sleep/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+ul {
+  list-style: none;
+  display: flex;
+	margin: 0;
+  padding: 5px;
+  align-items: center;
+  flex-wrap: wrap;
+}
