--- a/project_when2sleep/src/App.css
+++ b/project_when2sleep/src/App.css
@@ -33,6 +33,21 @@
   }
 }
 
+@font-face {
+  font-family: when2sleep;
+  src: url(../fonts/Montez-Regular.ttf);
+}
+
+@font-face {
+  font-family: nav;
+  src: url(../fonts/NanumPenScript-Regular.ttf);
+}
+
+@font-face {
+  font-family: question;
+  src: url(../fonts/NanumPenScript-Regular.ttf);
+}
+
 .card {
   padding: 2em;
 }
@@ -47,5 +62,54 @@ ul {
 	margin: 0;
   padding: 5px;
   align-items: center;
-  flex-wrap: wrap;
+}
+
+li{
+  padding: 10px;
+}
+
+.calculateDiv{
+  background-color: #305388bf;
+  color:white;
+  padding: 15px;
+  border-radius: 5px;
+  outline: #4181e1 solid 1.5px;
+}
+
+body{
+  background-color: rgb(15, 22, 69);
+}
+
+#currentTime{
+  color:rgba(255, 255, 255, 0.839);
+  background-color: rgba(36, 23, 122, 0.626);
+  padding: 5px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 20px #a46dde;
+}
+
+input{
+  background-color: rgb(72, 72, 148);
+  color:white;
+}
+
+ul li a{
+  color:white;
+  font-family: nav;
+  font-size: 30px;
+}
+
+#when2sleep a{
+  font-family: when2sleep;
+}
+
+
+#when2sleep a:hover{
+  color:rgba(250, 235, 215, 0.805);
+}
+
+.question{
+  font-family: question;
+  font-size: 35px;
+  margin:10px;
 }
