--- a/project_when2sleep/src/App.css
+++ b/project_when2sleep/src/App.css
@@ -77,7 +77,12 @@ li{
 }
 
 body{
-  background-color: rgb(15, 22, 69);
+  background: url(../images/stars.png) repeat center center fixed, rgb(15, 22, 69);
+  -webkit-background: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
 }
 
 #currentTime{
@@ -139,3 +144,4 @@ ul li a{
 .moon, .leftmoon{
   position: relative;
 }
+
