--- a/project_when2sleep/src/App.css
+++ b/project_when2sleep/src/App.css
@@ -114,7 +114,7 @@ input{
 ul li a{
   color:white;
   font-family: nav;
-  font-size: 30px;
+  font-size: 31px;
   padding: 10px;
 }
 
@@ -252,4 +252,18 @@ button:hover{
 header{
   display: flex;
   width: 50vw;
+  margin:auto
+}
+
+#loginButton{
+  width:100%;
+  display: flex;
+  height:70%;
+  justify-content: center;
+  align-items: center;
+}
+
+.light:hover{
+  filter:brightness(110%) 
+  drop-shadow(0px 0px 2px rgb(231, 206, 132));
 }
